[package]
name = "rim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
image = "0.24.2"
serde = {version="1.0.137", features=["derive"]}
futures-util = "0.3.21"
actix-cors = "0.6.1"
actix-multipart = "0.4.0"